responsive background images and fix no result white space issue

--- a/index.css
+++ b/index.css
@@ -136,16 +136,23 @@ main {
     background-size: cover;
 }
 
-.box1 {
+.aboutHachikoImg {
+    margin-left: auto;
+    margin-right: auto;
+    opacity: 0.9;
+    border-radius: 100px;
+}
+
+/* .box1 {
     height: 100vh;
     width: 100%;
-    background-image: url(Assets/hatchiko-wide.jpg);
+    background-image: url(images/hachiko.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     display: table;
     background-attachment: fixed;
-}
+} */
 
 .aboutTitle h1 {
     font-family: 'Poppins', sans-serif;
@@ -406,9 +413,10 @@ p.noResults {
     margin-right: auto;
     margin-left: auto;
     font-size: 30px;
-    margin-top: 100px;
+    padding: 50px;
     text-transform: uppercase;
     font-weight: bolder;
+    height: 75vh;
 }  
 
 /* 3 Box Section */
@@ -778,7 +786,17 @@ p.devName:hover {
           flex-direction: column;
           height: 600px;
       }
-
+      .aboutHachikoImg {
+          width: 100%;
+      }
+      .box2 {
+        height: 55vh;
+        background-size: auto;
+      }
+      .box3 {
+        background-size: auto;
+        height: 70vh;
+      }
   }
 
   @media screen and (min-width: 792px) {
@@ -786,7 +804,6 @@ p.devName:hover {
           width: 700px;
           height: 420px;
       }
-
   }
 
   @media screen and (min-width: 1080px) {
